--- a/public/style.css
+++ b/public/style.css
@@ -578,6 +578,14 @@ video {
   right: 50%;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
@@ -648,12 +656,20 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-cols-6 {
@@ -670,10 +686,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-end {
@@ -712,6 +724,10 @@ video {
   gap: 5rem;
 }
 
+.gap-28 {
+  gap: 7rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -728,16 +744,12 @@ video {
   gap: 1.5rem;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-24 {
-  gap: 6rem;
-}
-
-.gap-28 {
-  gap: 7rem;
 }
 
 .gap-x-5 {
@@ -747,10 +759,6 @@ video {
 
 .gap-y-8 {
   row-gap: 2rem;
-}
-
-.self-start {
-  align-self: flex-start;
 }
 
 .self-end {
@@ -795,6 +803,10 @@ video {
   border-width: 1px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-l {
   border-left-width: 1px;
 }
@@ -836,10 +848,6 @@ video {
   padding: 0.25rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
 .p-3 {
   padding: 0.75rem;
 }
@@ -848,8 +856,8 @@ video {
   padding: 1.25rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-1 {
@@ -877,19 +885,9 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .py-1\.5 {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .py-2 {
@@ -921,6 +919,10 @@ video {
   padding-bottom: 5rem;
 }
 
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -936,6 +938,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -973,6 +980,11 @@ video {
   line-height: 1rem;
 }
 
+.\!text-sm {
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1003,11 +1015,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.shadow-CustomOrange {
-  --tw-shadow-color: #FF9500;
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .transition-all {
@@ -1044,6 +1051,11 @@ video {
   background-color: rgb(255 149 0 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-customWhite:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 241 243 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
@@ -1053,9 +1065,33 @@ video {
   background-color: rgb(76 76 77 / 0.25);
 }
 
-.hover\:bg-customWhite:hover {
+.hover\:bg-lightCustomOrange\/90:hover {
+  background-color: rgb(255 244 229 / 0.9);
+}
+
+.hover\:bg-CustomOrange\/30:hover {
+  background-color: rgb(255 149 0 / 0.3);
+}
+
+.hover\:bg-customWhite\/30:hover {
+  background-color: rgb(241 241 243 / 0.3);
+}
+
+.hover\:bg-customWhite\/50:hover {
+  background-color: rgb(241 241 243 / 0.5);
+}
+
+.hover\:bg-lightCustomGrey:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(241 241 243 / var(--tw-bg-opacity, 1));
+  background-color: rgb(76 76 77 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-lightCustomGrey\/30:hover {
+  background-color: rgb(76 76 77 / 0.3);
+}
+
+.hover\:bg-lightCustomGrey\/20:hover {
+  background-color: rgb(76 76 77 / 0.2);
 }
 
 .hover\:text-white:hover {
@@ -1073,32 +1109,6 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-2xl:hover {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-CustomOrange:hover {
-  --tw-shadow-color: #FF9500;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:shadow-CustomOrange\/0:hover {
-  --tw-shadow-color: rgb(255 149 0 / 0);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:shadow-CustomOrange\/20:hover {
-  --tw-shadow-color: rgb(255 149 0 / 0.2);
-  --tw-shadow: var(--tw-shadow-colored);
-}
-
-.hover\:shadow-CustomOrange\/30:hover {
-  --tw-shadow-color: rgb(255 149 0 / 0.3);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .hover\:shadow-CustomOrange\/25:hover {
@@ -1204,6 +1214,10 @@ video {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
 
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:gap-10 {
     gap: 2.5rem;
   }
@@ -1238,11 +1252,6 @@ video {
     padding-bottom: 1rem;
   }
 
-  .md\:px-3 {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1265,6 +1274,11 @@ video {
 
   .md\:text-xl {
     font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 }
@@ -1297,10 +1311,6 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .xl\:gap-5 {
     gap: 1.25rem;
   }
@@ -1326,6 +1336,21 @@ video {
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
